# dropout_and_ram_2026

./: LICENSE  README.md  main.py  paper_experiments_mnist.ipynb  plots_from_multi_runs.ipynb  plots_from_single_run.ipynb  pyproject.toml
src/: utils.py
src/jax_resnet/: activations.py  dropout_masks.py  losses.py  model.py  training.py
